@@ -392,14 +392,14 @@ GTKMM GUI
 	     (Optional plug-in-ability/extensibility. Buttons should
 	     be bound to debugger commands.)
 
-	[ ]  "Workspace", where emulations can be created
+	[/]  "Workspace", where emulations can be created
 	     by drag-n-drop of components from a palette, and/or
 	     from other emulations. Normally, the workspace window would
 	     be docked in the "center" of the GXemul window, with the
 	     palette to the right, and the command window below it.
 
-		[ ]  Main workspace:
-			[ ]  Draw all components in the emulation tree,
+		[/]  Main workspace:
+			[/]  Draw all components in the emulation tree,
 			     using cairo.
 			[ ]  Scrollbars if the whole design area isn't possible
 			     to fit in the designated rectangle?
